Fix spacing around image

--- a/styles.css
+++ b/styles.css
@@ -428,7 +428,7 @@ a:hover {
 }
 
 .heading-event {
-    margin-bottom: -0.5rem;
+    margin-bottom: -1.75rem;
 }
 
 /*
@@ -544,5 +544,5 @@ a:hover {
 }
 
 .event-img {
-    margin-bottom: 0.5rem;
+    margin-bottom: 1rem;
 }
